modificación de título

--- a/empirismo.html
+++ b/empirismo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Presentación de Diapositivas</title>
+    <title>inicio del empirismo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background-image: url(/Imagenes/Empirismo2.png);">
