supresión de tildes

--- a/empirismo.html
+++ b/empirismo.html
@@ -8,10 +8,10 @@
     <div class="container">
         <div class="menu">
             <button onclick="currentSlide(1)">Inicio</button>
-            <button onclick="currentSlide(2)">Índice</button>
-            <button onclick="currentSlide(3)">Definición</button>
-            <button onclick="currentSlide(4)">Definición 1.1</button>
-            <button onclick="currentSlide(5)">Definición 1.2</button>
+            <button onclick="currentSlide(2)">Indice</button>
+            <button onclick="currentSlide(3)">Significado</button>
+            <button onclick="currentSlide(4)">Significado 1.1</button>
+            <button onclick="currentSlide(5)">Significado 1.2</button>
             <button onclick="currentSlide(6)">Origen</button>
             <button onclick="currentSlide(7)">Origen 1.1</button>
         </div>
@@ -81,12 +81,12 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <div class="menu">
-            <button onclick="currentSlide(8)">Características del Empirismo</button>
-            <button onclick="currentSlide(9)">Características del Empirismo</button>
-            <button onclick="currentSlide(10)">Características del Empirismo</button>
-            <button onclick="currentSlide(11)">Características del Empirismo</button>
-            <button onclick="currentSlide(12)">Características del Empirismo</button>
-            <button onclick="currentSlide(13)">Características del Empirismo</button>
+            <button onclick="currentSlide(8)">Caractersticas del Empirismo</button>
+            <button onclick="currentSlide(9)">Caractersticas del Empirismo</button>
+            <button onclick="currentSlide(10)">Caractersticas del Empirismo</button>
+            <button onclick="currentSlide(11)">Caractersticas del Empirismo</button>
+            <button onclick="currentSlide(12)">Caractersticas del Empirismo</button>
+            <button onclick="currentSlide(13)">Caractersticas del Empirismo</button>
         </div>
     </div>
     <footer class="pie-pagina">
