--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>inicio del empirismo</title>
+    <title>empirismo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background-image: url(/Imagenes/Empirismo2.png);">
