--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>empirismo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-image: url(empirismo32.jpg) ;">
+<body style="background-image: url(Empirismo2.png) ;">
     <div class="container">
         <div class="menu">
             <button onclick="currentSlide(1)">Inicio</button>
