--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva1.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva1.PNG" style="width:100%">
                 <div class="text">Diapositiva 1</div>
             </div>
             <div class="slide fade">
