--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="text">Diapositiva 2</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva3.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva3.PNG" style="width:100%">
                 <div class="text">Diapositiva 3</div>
             </div>
             <div class="slide fade">
@@ -45,7 +45,7 @@
                 <div class="text">Diapositiva 7</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva8.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva8.PNG" style="width:100%">
                 <div class="text">Diapositiva 8</div>
             </div>
             <div class="slide fade">
