modificación para exposición

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>empirismo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-image: url(Empirismo2.png) ;">
+<body style="background-image: url(./Imagenes/Empirismo.png) ;">
     <div class="container">
         <div class="menu">
             <button onclick="currentSlide(1)">Inicio</button>
@@ -21,7 +21,7 @@
                 <div class="text">Diapositiva 1</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva2.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva2.PNG" style="width:100%">
                 <div class="text">Diapositiva 2</div>
             </div>
             <div class="slide fade">
@@ -29,19 +29,19 @@
                 <div class="text">Diapositiva 3</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva4.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva4.PNG" style="width:100%">
                 <div class="text">Diapositiva 4</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva5.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva5.PNG" style="width:100%">
                 <div class="text">Diapositiva 5</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva6.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva6.PNG" style="width:100%">
                 <div class="text">Diapositiva 6</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva7.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva7.PNG" style="width:100%">
                 <div class="text">Diapositiva 7</div>
             </div>
             <div class="slide fade">
@@ -49,31 +49,31 @@
                 <div class="text">Diapositiva 8</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva9.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva9.PNG" style="width:100%">
                 <div class="text">Diapositiva 9</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva10.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva10.PNG" style="width:100%">
                 <div class="text">Diapositiva 10</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva11.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva11.PNG" style="width:100%">
                 <div class="text">Diapositiva 11</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva12.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva12.PNG" style="width:100%">
                 <div class="text">Diapositiva 12</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva13.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva13.PNG" style="width:100%">
                 <div class="text">Diapositiva 13</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva14.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva14.PNG" style="width:100%">
                 <div class="text">Diapositiva 14</div>
             </div>
             <div class="slide fade">
-                <img src="/Imagenes/Diapositiva15.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva15.PNG" style="width:100%">
                 <div class="text">Diapositiva 15</div>
             </div>
            
@@ -88,6 +88,9 @@
             <button onclick="currentSlide(12)">Caractersticas del Empirismo</button>
             <button onclick="currentSlide(13)">Caractersticas del Empirismo</button>
         </div>
+    </div>
+    <div>
+        <a class="menu2" href="./empirismo.html">Siguiente</a>
     </div>
     <footer class="pie-pagina">
         <p>
