--- a/empirismo1.html
+++ b/empirismo1.html
@@ -9,18 +9,14 @@
         
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva16.PNG" style="width:100%">
-                <div class="text">Diapositiva 16</div>
+                <img src="./Imagenes/Diapositiva1.JPG" style="width:100%">
+                <div class="text">Diapositiva 1</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva17.PNG" style="width:100%">
-                <div class="text">Diapositiva 17</div>
+                <img src="./Imagenes/Diapositiva2.JPG" style="width:100%">
+                <div class="text">Diapositiva 1</div>
             </div>
             
-            <div class="slide fade">
-                <img src="./Imagenes/Diapositiva18.PNG" style="width:100%">
-                <div class="text">Diapositiva 18</div>
-            </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
