--- a/empirismo 2.html
+++ b/empirismo 2.html
@@ -16,32 +16,32 @@
         </div>
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva16.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva3.JPG" style="width:100%">
                 <div class="text">Diapositiva 16</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva17.PNG" style="width:100%">
+                <img src="./Imagenes/Diapositiva4.JPG" style="width:100%">
                 <div class="text">Diapositiva 17</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva18.PNG" style="width:100%">
-                <div class="text">Diapositiva 18</div>
+                <img src="./Imagenes/Diapositiva5.JPG" style="width:100%">
+                <div class="text">Diapositiva 5</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva19.PNG" style="width:100%">
-                <div class="text">Diapositiva 19</div>
+                <img src="./Imagenes/Diapositiva6.JPG" style="width:100%">
+                <div class="text">Diapositiva 6</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva24.PNG" style="width:100%">
-                <div class="text">Diapositiva 24</div>
+                <img src="./Imagenes/Diapositiva7.JPG" style="width:100%">
+                <div class="text">Diapositiva 7</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva25.PNG" style="width:100%">
-                <div class="text">Diapositiva 25</div>
+                <img src="./Imagenes/Diapositiva8.JPG" style="width:100%">
+                <div class="text">Diapositiva 8</div>
             </div>
             <div class="slide fade">
-                <img src="./Imagenes/Diapositiva26.PNG" style="width:100%">
-                <div class="text">Diapositiva 26</div>
+                <img src="./Imagenes/Diapositiva9.JPG" style="width:100%">
+                <div class="text">Diapositiva 9</div>
             </div>
         
 
