--- a/empirismo 2.html
+++ b/empirismo 2.html
@@ -11,17 +11,18 @@
             <button onclick="currentSlide(2)">Ejemplos edad antigua y media</button>
             <button onclick="currentSlide(3)">Ejemplos edad moderna</button>
             <button onclick="currentSlide(4)">Aporte del empirismo jurídico al derecho actual</button>
+            <button onclick="currentSlide(5)">Aporte audiovisual</button>
 
             
         </div>
         <div class="slideshow-container">
             <div class="slide fade">
                 <img src="./Imagenes/Diapositiva3.JPG" style="width:100%">
-                <div class="text">Diapositiva 16</div>
+                <div class="text">Diapositiva 3</div>
             </div>
             <div class="slide fade">
                 <img src="./Imagenes/Diapositiva4.JPG" style="width:100%">
-                <div class="text">Diapositiva 17</div>
+                <div class="text">Diapositiva 4</div>
             </div>
             <div class="slide fade">
                 <img src="./Imagenes/Diapositiva5.JPG" style="width:100%">
@@ -31,6 +32,10 @@
                 <img src="./Imagenes/Diapositiva6.JPG" style="width:100%">
                 <div class="text">Diapositiva 6</div>
             </div>
+            <div class="slide fade">
+                <iframe class="video" src="https://www.youtube.com/embed/6g8O-OKUVe0" frameborder="0" allowfullscreen width="560" height="315"></iframe>
+            </div>
+           
             <div class="slide fade">
                 <img src="./Imagenes/Diapositiva7.JPG" style="width:100%">
                 <div class="text">Diapositiva 7</div>
@@ -49,9 +54,9 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <div class="menu">
-            <button onclick="currentSlide(5)">Reflexión del grupo de estudio-Empirismo</button>
-            <button onclick="currentSlide(6)">Conclusiones</button>
-            <button onclick="currentSlide(7)">Bibliografía</button>
+            <button onclick="currentSlide(6)">Reflexión del grupo de estudio-Empirismo</button>
+            <button onclick="currentSlide(7)">Conclusiones</button>
+            <button onclick="currentSlide(8)">Bibliografía</button>
         </div>
     </div>
     <div>
